adding responsive web design tempalte2

--- a/October28 2021/excess.html
+++ b/October28 2021/excess.html
@@ -56,7 +56,8 @@
 </div>
 <div id="row5">
 <span style="float:left;color: aliceblue;padding:10px;padding-left: 100px;background-color: rgb(15, 15, 15);">Copyright © 2021 - All Rights Reserved - <a href="#Domain Name">PLAYPERFECT</a></span>
-<span style="float:right;color: aliceblue;padding:10px;padding-right: 100px;background-color: rgb(15, 15, 15);">PRESENTED BY--<a href="#OS Templates">TEJA'SSPORTS</a></span>
+<span style="float:right;color: aliceblue;padding:10px;padding-right: 100px;background-color: rgb(15, 15, 15);">PRESENTED BY--<a href="#O
+    S Templates">TEJA'SSPORTS</a></span>
 </div>
 
 
