--- a/HTML/RWD/template Basic 83/index.html
+++ b/HTML/RWD/template Basic 83/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-<!-- ============================ Header with search box on right and navigator at bottom ============================ -->
+    <!-- ============================ Header with search box on right and navigator at bottom ============================ -->
     <!-- ==================== Header Section ==================== -->
     <div class="wrapper row1">
         <header>
@@ -32,6 +32,99 @@
                 </ul>
             </nav>
         </header>
-    </div>     
+    </div>
+    <!-- ================================================================================================================= -->
+    <!-- =================================================== Container =================================================== -->
+    <div class="wrapper row2">
+        <div id="container">
+            <!-- ==================== Section 1 ==================== -->
+            <section id="section1">
+                <img src="./images/demo/deadpool cover image.png" alt="deadpool 960x280.">
+            </section>
+
+            <!-- ========== Home Page ============== -->
+            <div id="homepage">
+
+                <!-- ========== Section 2 ============== -->
+                <section id="section2">
+                    <article id="article1" class="article_row1">
+                        <figure>
+                            <img src="./images/demo/32x32image1" alt="Ryan Ronalds">
+                        </figure>
+                        <strong>Ryan Ronalds</strong>
+                        <p>Ryan Rodney Reynolds (born October 23, 1976) is a Canadian actor and film producer.</p>
+                        <p class="readmore">
+                            <a href="https://en.wikipedia.org/wiki/Ryan_Reynolds" target="_blank">Read More »</a>
+                        </p>
+                    </article>
+                    <article id="article2" class="article_row1">
+                        <figure>
+                            <img src="./images/demo/32x32image2" alt="Morena Baccarin">
+                        </figure>
+                        <strong>Morena Baccarin</strong>
+                        <p>Morena Silva de Vaz Setta Baccarin ( born June 2, 1979) is a Brazilian actress.</p>
+                        <p class="readmore">
+                            <a href="https://en.wikipedia.org/wiki/Morena_Baccarin"  target="_blank">Read More »</a>
+                        </p>
+                    </article>
+                    <article id="article3" class="article_row1">
+                        <figure>
+                            <img src="./images/demo/32x32image3" alt="32x32">
+                        </figure>
+                        <strong>Ed Skrein</strong>
+                        <p>Edward George Skrein (born 29 March 1983) is an English actor, film director, screenwriter and rapper.</p>
+                        <p class="readmore">
+                            <a href="https://en.wikipedia.org/wiki/Ed_Skrein"  target="_blank">Read More »</a>
+                        </p>
+                    </article>
+                    <article id="article4" class="article_row1 last">
+                        <figure>
+                            <img src="./images/demo/32x32image4" alt="32x32">
+                        </figure>
+                        <strong>Karan Soni</strong>
+                        <p>Karan Soni (born January 8, 1989) is an Indian-American actor. Often appearing in comedic roles.</p>
+                        <p class="readmore">
+                            <a href="https://en.wikipedia.org/wiki/Karan_Soni"  target="_blank">Read More »</a>
+                        </p>
+                    </article>
+                </section>
+
+                <!-- ========== Section 3 ============== -->
+                <section id="section3">
+                    <article id="movieplot">
+                        <h2>
+                        Movie Plot
+                        </h2>
+                        <p>This is the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool.</p> 
+                        <p>Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.</p>
+                        
+                        <p class="readmore">
+                            <a href="https://www.imdb.com/title/tt1431045/plotsummary"  target="_blank">Read More »</a>
+                        </p>
+                    </article>
+                    <aside id="about">
+                        <h2>
+                            About
+                        </h2>
+                        <p>Deadpool is a 2016 American superhero film based on the Marvel Comics character of the same name.</p>
+                        <p>Directed by Tim Miller it stars Ryan Reynolds, Morena Baccarin</p>
+                        
+                        <p class="readmore">
+                            <a href="https://en.wikipedia.org/wiki/Deadpool_(film)"  target="_blank">Read More »</a>
+                        </p>
+                    </aside>
+                </section>
+            </div>
+        </div>
+    </div>
+    <!-- ================================================================================================================= -->
+    <!-- =======================================================Footer==================================================== -->
+    <div class="wrapper row3">
+        <footer id="main_footer">
+            <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
+            <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
+        </footer>
+    </div>
+    <!-- ================================================================================================================= -->     
  </body>
 </html>
