RWD For basic87

--- a/practice/basic_templetes/basic65.html
+++ b/practice/basic_templetes/basic65.html
@@ -122,9 +122,12 @@
             opacity: 0.7;
         }
     </style>
+    <script>
+
+    </script>
 </head>
 <body>
-    <header id=heading>
+    <header id=heading class="col-3 col-s-3">
          <main>
             <span> skrillex </span> <br> Sonny John Moore
          </main>
