--- a/css/model.html
+++ b/css/model.html
@@ -53,7 +53,7 @@
 
 <body>
     <div class="main">
-        <img src="./images/image1.jpeg" alt="" id="smallImage" onclick="modal()">
+        <img src="./images/image1.jpeg" alt="" id="smallImage" onclick="model()">
     </div>
 
     <div id="overlay">
@@ -61,7 +61,7 @@
     </div>
 
     <script>
-        function modal() {
+        function model() {
             var overLay = document.getElementById("overlay")
             overLay.style.display = "block"
             
