--- a/template_RWD/T84_movie_poster.html
+++ b/template_RWD/T84_movie_poster.html
@@ -4,7 +4,7 @@
 <title>Movies</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./movie_poster_style.css" type="text/css">
+<link rel="stylesheet" href="./T84_movie_poster_style.css" type="text/css">
 <style>
   #header{
     display:block; 
@@ -74,7 +74,7 @@
     </nav>
   </header>
 </div>
-<!-- <div class="wrapper row2">
+<div class="wrapper row2">
   <div id="container" class="clear">
     <section id="slider"><a href="#"><img src="./images/power.jpg" width="960" height="360" alt=""></a></section>
     <section id="shout">
