--- a/template_RWD/T85_tour_template.html
+++ b/template_RWD/T85_tour_template.html
@@ -3,7 +3,7 @@
 <head>
 <title>Basic 85</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="./tour_template_style.css" type="text/css">
+<link rel="stylesheet" href="./T85_tour_template_style.css" type="text/css">
 </head>
 <body>
 <div class="wrapper row1">
