--- a/template_RWD/T86_10000coders.html
+++ b/template_RWD/T86_10000coders.html
@@ -3,7 +3,7 @@
 <head>
 <title>10000 coders</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="10000coders_style.css" type="text/css">
+<link rel="stylesheet" href="T86_10000coders_style.css" type="text/css">
 </head>
 <body>
 <div class="wrapper row1">
