--- a/template_RWD/T87-flipcart.html
+++ b/template_RWD/T87-flipcart.html
@@ -3,7 +3,7 @@
 <head>
 <title>Template5</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="flipcart_style.css" type="text/css">
+<link rel="stylesheet" href="T87_flipcart_style.css" type="text/css">
 </head>
 <body>
 <div class="wrapper row1">
