--- a/template_RWD/T88_developer.html
+++ b/template_RWD/T88_developer.html
@@ -3,7 +3,7 @@
 <head>
 <title>Developer</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="./developer_style.css" type="text/css">
+<link rel="stylesheet" href="./T88_developer_style.css" type="text/css">
 </head>
 <body>
 <div class="wrapper row1">`
