--- a/template_RWD/T83_spaceX.html
+++ b/template_RWD/T83_spaceX.html
@@ -4,7 +4,83 @@
 <head>
     <title>SpaceX</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./spaceX_style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./T83_spaceX_style.css">
+    <style>
+        #header {
+            display: block;
+            width: 960px;
+            margin: 0 auto;
+            overflow: auto;
+
+        }
+
+        #header nav ul li {
+            width: 75px;
+            list-style-type: none;
+            padding: 10px;
+            text-align: center;
+            display: inline-block;
+            text-transform: uppercase;
+            font-size: 13px;
+        }
+
+        nav {
+            clear: both;
+            margin: 10px auto;
+            background-color: #232323;
+            padding: 10px;
+            margin: 20px 0;
+        }
+
+
+        @media only screen and (max-width:768px) {
+            #header {
+                width: 100%;
+            }
+
+            #header nav ul li {
+                width: 100%;
+                display: block;
+                border-bottom: 3px solid white;
+                margin: 0 auto;
+            }
+
+            nav {
+                padding: 0px;
+                margin:0;
+            }
+            #container{
+                width: 100%;
+            }
+            #container #slider img{
+                width: 100%;
+            }
+            #services{
+                width:100%;
+        
+            }
+            .clear{
+                width: 100%;
+            }
+            .one_quarter{
+                display:block;
+                width:100%;
+            }
+            .last clear{
+                width:100%;
+            }
+            .three_quarter{
+                width: 100%;
+            }
+            #footer{
+                width: 100px;
+            }
+           
+        }
+
+    </style>
+    </style>
 </head>
 
 <body>
@@ -41,41 +117,50 @@
                     <article class="one_quarter">
                         <figure><img src="./images/elon.jpg" width="32" height="32" alt=""></figure>
                         <strong>Elon Musk</strong>
-                        <p>Is an entrepreneur and business magnate. He is the founder, CEO, and Chief Engineer at SpaceX, early stage investor.</p>
+                        <p>Is an entrepreneur and business magnate. He is the founder, CEO, and Chief Engineer at
+                            SpaceX, early stage investor.</p>
                         <p class="more"><a href="#">Read More &raquo;</a></p>
                     </article>
                     <article class="one_quarter">
                         <figure><img src="./images/hari 1.jpg" width="32" height="32" alt=""></figure>
                         <strong>Punem Harish</strong>
-                        <p>Manager in the SpaceX Company. 10 Years experience in the development. 8 years experience in this feild.</p>
+                        <p>Manager in the SpaceX Company. 10 Years experience in the development. 8 years experience in
+                            this feild.</p>
                         <p class="more"><a href="#">Read More &raquo;</a></p>
                     </article>
                     <article class="one_quarter">
                         <figure><img src="./images/busi1.jpg" width="32" height="32" alt=""></figure>
                         <strong>John Meckalon</strong>
-                        <p>Managing all the required equiments in the SpaceS Company. 5 years experience in this feild.</p>
+                        <p>Managing all the required equiments in the SpaceS Company. 5 years experience in this feild.
+                        </p>
                         <p class="more"><a href="#">Read More &raquo;</a></p>
                     </article>
                     <article class="one_quarter lastbox">
                         <figure><img src="./images/busi2.jpg" width="32" height="32" alt=""></figure>
                         <strong>Storm</strong>
-                        <p>To maintain the Accounts in the SpaceX.  6 years experience in this feild.</p>
+                        <p>To maintain the Accounts in the SpaceX. 6 years experience in this feild.</p>
                         <p class="more"><a href="#">Read More &raquo;</a></p>
                     </article>
                 </section>
                 <section class="last clear">
                     <article class="three_quarter">
-                        <h2>SpaceX  AeroSpace  Company</h2>
-                        <p>SpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was founded in 2002 to revolutionize space technology, ...<a href="https://www.os-templates.com/"
-                                title="Free Website Templates">OS Templates</a>. For full terms of use of this template
+                        <h2>SpaceX AeroSpace Company</h2>
+                        <p>SpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was
+                            founded in 2002 to revolutionize space technology, ...<a
+                                href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>.
+                            For full terms of use of this template
                             please read our <a href="https://www.os-templates.com/template-terms">website template
                                 licence</a>.</p>
-                        <p>SpaceX's achievements include the first privately funded liquid-propellant rocket to reach orbit (Falcon 1 in 2008), the first private company to successfully launch <a href="https://www.os-templates.com/">free website templates</a>.</p>
+                        <p>SpaceX's achievements include the first privately funded liquid-propellant rocket to reach
+                            orbit (Falcon 1 in 2008), the first private company to successfully launch <a
+                                href="https://www.os-templates.com/">free website templates</a>.</p>
                         <footer class="more"><a href="#">Read More &raquo;</a></footer>
                     </article>
                     <article class="one_quarter lastbox">
                         <h2>Tesla</h2>
-                        <p>Elon Musk had the one of the another company name is Tesla is accelerating the world's transition to sustainable energy with electric cars, solar and integrated renewable energy solutions for home.</p>
+                        <p>Elon Musk had the one of the another company name is Tesla is accelerating the world's
+                            transition to sustainable energy with electric cars, solar and integrated renewable energy
+                            solutions for home.</p>
                         <footer class="more"><a href="#">Read More &raquo;</a></footer>
                     </article>
                 </section>
