--- a/HTML/RWD/Template_responsive/Template2.html
+++ b/HTML/RWD/Template_responsive/Template2.html
@@ -45,25 +45,29 @@
                 <section id="latest" class="clear">
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
+                            <img src="../Template_responsive/template_images/215x315.gif" alt="" width="215"
+                                height="315">
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
+                            <img src="../Template_responsive/template_images/215x315.gif" alt="" width="215"
+                                height="315">
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
+                            <img src="../Template_responsive/template_images/215x315.gif" alt="" width="215"
+                                height="315">
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter lastbox">
                         <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
+                            <img src="../Template_responsive/template_images/215x315.gif" alt="" width="215"
+                                height="315">
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
@@ -82,7 +86,7 @@
                         <li>
                             <article class="clear">
                                 <figure>
-                                    <img class="one" src="../Template/template_images/180x150.gif" alt="">
+                                    <img src="../Template_responsive/template_images/180x150.gif" alt="">
                                     <figcaption>
                                         <h2>Indonectetus facilis leo nibh</h2>
                                         <p>
@@ -102,7 +106,7 @@
                         <li class="last">
                             <article class="clear">
                                 <figure>
-                                    <img src="../Template/template_images/180x150.gif" alt="">
+                                    <img src="../Template_responsive/template_images/180x150.gif" alt="">
                                     <figcaption>
                                         <h2>Indonectetus facilis leo nibh</h2>
                                         <p>
