--- a/HTML/RWD/Template_responsive/Template4.html
+++ b/HTML/RWD/Template_responsive/Template4.html
@@ -161,7 +161,7 @@
             </p>
             <p class="f1_right">
                 Template by
-                <a href="https://os-templates.com/" title="Free Website Templates">OS Templates</a>
+                <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates">OS Templates</a>
             </p>
         </footer>
     </div>
