--- a/template_RWD/T84_movie_poster.html
+++ b/template_RWD/T84_movie_poster.html
@@ -104,7 +104,8 @@
         float: right;
       }
       #shout{
-        width: 100px;
+        width: 100%;
+        
       }
       #container #shout{
         width: 100%;
@@ -112,6 +113,9 @@
         display:inline;
         color: black;
         border: none;
+      }
+      #shout p{
+        background-color: coral;
       }
 
     }
