--- a/template_RWD/T86_10000coders.html
+++ b/template_RWD/T86_10000coders.html
@@ -3,7 +3,153 @@
 <head>
 <title>10000 coders</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="T86_10000coders_style.css" type="text/css">
+<style>
+   #header {
+      display: block;
+      width: 960px;
+      margin: 0 auto;
+      overflow: auto;
+
+    }
+    #header nav{
+        float:none ;
+      }
+
+    #header nav ul li {
+      width: 75px;
+      list-style-type: none;
+      padding: 10px;
+      text-align: center;
+      display: inline-block;
+      text-transform: uppercase;
+      font-size: 13px;
+    }
+
+    nav {
+      clear: both;
+      margin: 10px auto;
+      background-color: #232323;
+      padding: 10px;
+      margin: 20px 0;
+    }
+
+    @media only screen and (max-width:768px) {
+      #header {
+        width: 100%;
+      }
+      #hrgroup{
+        background-color: black;
+      }
+
+      #header nav ul li {
+        width: 100%;
+        display: block;
+        border-bottom: 3px solid white;
+        margin: 0 auto;
+      }
+      #header nav{
+        float:none ;
+      }
+
+      nav {
+        padding: 0px;
+      }
+
+      .row2 {
+        background-color: lightskyblue;
+        color: black;
+      }
+
+      #container {
+        width: 100%;
+      }
+      #container #slider figure figcaption{
+        width: 100%;
+        display: inline-block;
+        float: none;
+        margin: 0px;
+        padding: 0px;
+
+      }
+      #container #slider {
+        width: 100%;
+      }
+        
+
+      #container #slider figure img {
+        float: none;
+        width: 100%;
+        padding-bottom: 20px;
+      }
+
+      #services {
+        width: 100%;
+
+      }
+      #container #homepage #services article img {
+            float: left;
+            width: 80px;
+            height: 80px;
+            margin: 0 10px 10px 0;
+            padding: 4px;
+            border: 1px solid #DEDEDE;
+        }
+
+      .clear {
+        width: 100%;
+      }
+
+      .one_quarter {
+        display: block;
+        width: 100%;
+      }
+
+      .last clear {
+        width: 100%;
+      }
+
+      .three_quarter {
+        width: 100%;
+      }
+
+      .wrapper row3 {
+        width: 100px;
+      }
+
+      #footer {
+        width: 100px;
+        margin: 0 auto;
+        padding: 10px;
+        display: inline;
+      }
+
+      .fl_left {
+        float: left;
+      }
+
+      .fl_right {
+        float: right;
+      }
+      #shout{
+        width: 100%;
+        
+      }
+      #container #shout{
+        width: 100%;
+        text-align:left;
+        display:inline;
+        color: black;
+        border: none;
+      }
+      #shout p{
+        background-color: coral;
+      }
+
+    }
+
+</style>
 </head>
 <body>
 <div class="wrapper row1">
