--- a/template_RWD/T87-flipcart.html
+++ b/template_RWD/T87-flipcart.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>Template5</title>
+  <title>FlipCart</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="T87_flipcart_style.css" type="text/css">
@@ -28,6 +28,19 @@
       text-transform: uppercase;
       font-size: 13px;
     }
+     /* adding over ____________HOVER_________________________________ */
+
+     #header nav ul li:hover  {
+     
+     color: white;
+     background-color: tomato;
+   }
+   #header nav ul li:hover a {
+    
+    color: white;
+    background-color: tomato;
+  }
+
 
     nav {
       clear: both;
